# sing-box-for-windows

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clash_api.rs  config.rs  lib.rs  main.rs  proxy.rs  singbox.rs  tray.rs
src/components/: Sidebar.tsx  StatusBadge.tsx  TitleBar.tsx
src/hooks/: useProfiles.ts  useSingBox.ts
src/pages/: Dashboard.tsx  Groups.tsx  Logs.tsx  Profiles.tsx  Settings.tsx
src/store/: index.ts
